differentiate inner and outer class for H3